--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -46,7 +46,9 @@
                     android:layout_height="match_parent"
                     android:scaleType="fitXY"
                     android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"/>
+                    android:layout_marginRight="8dp"
+                    android:background="@color/lightGrey"
+                    android:padding="1dp"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="0dp"
@@ -140,7 +142,9 @@
                     android:layout_height="match_parent"
                     android:scaleType="fitXY"
                     android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"/>
+                    android:layout_marginRight="8dp"
+                    android:background="@color/lightGrey"
+                    android:padding="1dp"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="0dp"
