--- a/app/src/main/res/layout-port/content_main.xml
+++ b/app/src/main/res/layout-port/content_main.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:fillViewport="true">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -39,7 +40,9 @@
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
                 android:layout_marginLeft="30dp"
-                android:layout_marginRight="20dp"/>
+                android:layout_marginRight="20dp"
+                android:background="@color/lightGrey"
+                android:padding="1dp"/>
             <ImageView
                 android:id="@+id/righteye_view"
                 android:layout_width="0dp"
@@ -47,7 +50,9 @@
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="30dp"/>
+                android:layout_marginRight="30dp"
+                android:background="@color/lightGrey"
+                android:padding="1dp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
