--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.lzh.nystagmus.MainActivity">
+    tools:context="com.example.hejin.nystagmus.MainActivity">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_height="match_parent"
