--- a/app/src/main/res/layout-land/activity_settings.xml
+++ b/app/src/main/res/layout-land/activity_settings.xml
@@ -7,7 +7,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:fitsSystemWindows="true"
-    tools:context="com.example.lzh.nystagmus.SettingsActivity">
+    tools:context="com.example.hejin.nystagmus.SettingsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
