--- a/app/src/main/res/layout-port/content_introduce.xml
+++ b/app/src/main/res/layout-port/content_introduce.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.lzh.nystagmus.IntroduceActivity"
+    tools:context="com.example.hejin.nystagmus.IntroduceActivity"
     tools:showIn="@layout/activity_introduce">
     <LinearLayout
         android:layout_width="match_parent"
